adds JNCIA Devops

--- a/Old/Devops/Juniper DevOps.ipynb
+++ b/Old/Devops/Juniper DevOps.ipynb
@@ -4,6 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Juniper Junos into\n",
+    "\n",
+    "[section under construction]\n",
+    "\n",
     "* 1.1. Loading configuration \n",
     "\n",
     "```\n",
@@ -13,10 +17,95 @@
     "\n",
     "```\n",
     "\n",
-    "* 1.2. Clear specifig configuration `clear log [log_file]`\n",
-    "* 1.3. Show interface information `show interfaces`\n",
-    "* 1.4. Clear specific service `clear snmp`\n",
-    "* 1.5. Show routing table `show route`\n"
+    "* 1.2. Clear specifig "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# DevOps Intro \n",
+    "## A shift in approach\n",
+    "### Traditional way\n",
+    "In the past, network architecture looked like a bunch of network devices connected through a common fabric, although the managability was determined by who well the design was done, however it falls short scalability is concerned. Some of the issues were, \n",
+    "* __Manual configuration__ of hardware devices\n",
+    "* New services requred new devices to be installed and provisioned and a __network redesingn__\n",
+    "* Fire-fight culture with all incidents are solved by __human intervension__\n",
+    "\n",
+    "### Modern Challanges\n",
+    "* The world is changing fast and hence the customer expectation and demand \n",
+    "* Fast-provisioning and Rapid service changes __on-demand__\n",
+    "* Virtualization and platform independence leading to __cloud migration__\n",
+    "\n",
+    "### Trend in networking\n",
+    "* Manual configuration of network devices is time-consuming and leaves a room for human error\n",
+    "* Automation provides cost-cut, scalability and fast service delivery\n",
+    "* Netwokring is becoming a part to support larger infrastructure project e.g. public cloud, scalable web-sites, CDN etc. Thus have to keep pace with software evolution otherwise end up being a bottleneck. \n",
+    "* Architecture like SD-WAN offers full virtualization of network resources, VMs without a (virtual) netowork is useless. \n",
+    "* Overall, networking is becoming more like a software project. \n",
+    "\n",
+    "and hence, static way to managing IT infra is not an option any more, therefore automation. \n",
+    "\n",
+    "## Evolution in Software Development \n",
+    "### Waterfall model\n",
+    "The classic model for software development \n",
+    "![](pics/waterfall.png)\n",
+    "* Formulated in 1970 as a first model to build software \n",
+    "* Next phase could only starts if the preceeding phase finishes\n",
+    "* Generally lacks flexibiliy and slow to develop feature. Only works if all the requirement are gather in the begining which is a myth.  \n",
+    "* The larger the codebase, the morelikely there will be issues in production. Its only used by Organic projects. \n",
+    "\n",
+    "### Agile Model\n",
+    "Agile model was developped as take to the limitation encountered by WFM. The Agile model prectices the follwing principles.\n",
+    "![](pics/agile.png)\n",
+    "* __Menifesto__ : http://agilemanifesto.org\n",
+    "    * customer satisfaction via continious delivary of valuable software with highest priority\n",
+    "    * Frequesnt release\n",
+    "    * welcome changing requiremnt : Customer feedback \n",
+    "    * Daily cooperation between developer and management teams\n",
+    "    * Self organizing team aiming to become more effective and adjusting accordingly\n",
+    "* __Values__:\n",
+    "    * __individuals and interactions__ over processes and tools\n",
+    "    * __working software__ over comprehensive docs\n",
+    "    * __consumer collab__ over contract negotiation\n",
+    "    * __responding to change__ over following plans\n",
+    "    \n",
+    "### Devops \n",
+    "Agility not only in development but too in operation\n",
+    "![](pics/devops.png)\n",
+    "* A software or system development methodology, initially appreared as _\"Agile Infrastructure\"_ in 2008\n",
+    "* Unifies the DEVelopment and OPerations by enhansing the cohession of communication, collaboration and integration between both the teams.\n",
+    "* Influenced by __Lean Manufacturing__ (Minimise waste, maximise productivity)\n",
+    "* Changes in functionality takes place frequently to quickly move improvements into production by __Automation, Orchestration__ and __Rolebacks__.\n",
+    "\n",
+    "## Needs for DevOps\n",
+    "__What problems does it solve ?__ \n",
+    "* allows organization to move faster in a controlled manner ensuring reliability\n",
+    "* teams having competing goals: Developers create new features, operators focusses on stability\n",
+    "* Quantifying survey : https://puppet.com/resources/whitepaper/state-of-devops-report\n",
+    "\n",
+    "## From DevOps to DevNet\n",
+    "![](pics/iac.png)\n",
+    "* Traditional networking requires loggin into devices individually and configure them \n",
+    "* Use DevOps tools to automate the network provissioning and configuration, results reduce cost, increase speed and improve quality\n",
+    "* __Infrastructure as Code__ : Managing an infrastructure through code, relies heavily on automation and virtualization. \n",
+    "\n",
+    "## DevOps Goals\n",
+    "DevOps is a culture, a set of practices and values that people of an organization follow. There are three ways (Refer _The Devops handbook_ for more details) \n",
+    " \n",
+    " |Ways     | principles |\n",
+    " |--- | --- |\n",
+    " |__Flow__ | Consider the whole system <br> don't allow local improvements to degrade the system performance <br> Always seek to increase rate of flow <br> small work around to solve a problem may accumulate to a spaggetti problem called __technical debt__ avoid it. |\n",
+    " | __Feedback__ | analyse feedback at each stage by automating it <br> try to learn from it   |\n",
+    " | __Continuty__ | Contininous improvement by introspection <br> __continous integration__ i.e. frequently committing and testing the code (git), if succeded merge with the master branch <br> continious delivery and deployment i.e. deliver and deploy the product as fast as possible (ansible|, puppet) |\n",
+    " \n",
+    "## DevOps implementation\n",
+    "Based on the requirements, devops implementation varies there are mainly two phillosophies.\n",
+    "\n",
+    "| Philosophy | implication |\n",
+    "|--- | --- |\n",
+    "|Site Reliability Engineering (__SRE__) | Google's model primarily applies on software developme |\n",
+    "|Network Reliability Engineering (__NRE__) | Devops as a automation tools <br> customer stisfacton <br> reliaes on proctive testing than hopes <br> Network as an inseparable part of a larger system <br> embresses failure but ensures the same doesn't happen twice <br> a never ending journy |"
    ]
   },
   {
@@ -786,13 +875,6 @@
     "* Enable it by `set system services rest enable-explorer` then `commit`\n",
     "* open it a browser with `http://[router-ip]:3000`"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
