--- a/Old/Devops/Juniper DevOps.ipynb
+++ b/Old/Devops/Juniper DevOps.ipynb
@@ -4,6 +4,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## title<a class=\"tocSkip\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Juniper Junos into\n",
     "\n",
     "[section under construction]\n",
@@ -104,7 +111,7 @@
     "\n",
     "| Philosophy | implication |\n",
     "|--- | --- |\n",
-    "|Site Reliability Engineering (__SRE__) | Google's model primarily applies on software developme |\n",
+    "|Site Reliability Engineering (__SRE__) | Google's model primarily applies on software development |\n",
     "|Network Reliability Engineering (__NRE__) | Devops as a automation tools <br> customer stisfacton <br> reliaes on proctive testing than hopes <br> Network as an inseparable part of a larger system <br> embresses failure but ensures the same doesn't happen twice <br> a never ending journy |"
    ]
   },
