mod JNCIA-DEVOPS

--- a/Old/Devops/Juniper DevOps.ipynb
+++ b/Old/Devops/Juniper DevOps.ipynb
@@ -196,7 +196,17 @@
     "* Performs auto-installation \n",
     "    * Configure DHCP server \n",
     "    * DHCP server reports the config server location\n",
-    "    * ZTP enable device will fetch the config and apply it "
+    "    * ZTP enable device will fetch the config and apply it \n",
+    "    \n",
+    "## Data Serialization\n",
+    "| Data Structures \t| YAML \t| JSON \t|\n",
+    "|-\t|-\t|-\t|\n",
+    "| Strings \t| hostname \t| \"hostname\" \t|\n",
+    "| Integer \t| 12 \t| 12 \t|\n",
+    "| Boolean \t| true \t| true \t|\n",
+    "| list \t| Sequence<br>    -one<br>    -two<br>    -three \t| Array=['one','two','three'] \t|\n",
+    "| Dictionary \t| Mapping<br>    hostname:rtr1<br>    location:london<br>    type: MX960 \t| Object={<br>    'hostname':'rtr1',<br>    'location':'london'<br>    'type':'MX960'<br>} \t|\n",
+    "| Comments \t| # this is a comment \t| N/A \t|"
    ]
   },
   {
@@ -256,7 +266,10 @@
     "## XPATH \n",
     "* Select specific XML node using text notation, similar to UNIX file path.  \n",
     "* e.g. `/config/system/root-authentication/encrypted-password/`\n",
-    "* XPATH can be __absolute__ or __relative__0 "
+    "* XPATH can be __absolute__ or __relative__0 \n",
+    "\n",
+    "## Predicates \n",
+    "mayches a specific parameter within an XML data using `/XPATH[Condition]`"
    ]
   },
   {
@@ -266,6 +279,8 @@
     "# XML-API & NETCONF\n",
     "\n",
     "## Why NETCONF\n",
+    "The client eshtablishes a TCP port830 to the router, SSH params are negotiated and client starts sending config messages in XML format.  \n",
+    "\n",
     "* Orchestrating a number of network devices remotely using automation tool securely\n",
     "* RFC 6241\n",
     "* runs on TCP port 830 by default\n",
@@ -274,10 +289,10 @@
     "\n",
     "| Layer | Task |\n",
     "|---    | ---  |\n",
-    "|Content|  RPC req, resp paylaod and some additional variables   |\n",
-    "|Operation|`<lock>,<unlock>`: ConfigDB, <br> `<get>`,`<get-config>`,`<edit-config>`,`<copy-config>`,`<delete-config>`:Config, <br> `<commit>,<discard-changes>,<validate>`:Config change, <br> `<create-subscription>,<close-session>,<kill-session>`: Session info     |\n",
-    "|Message|`<rpc>`:Req, `<rpc-reply>`:ACK, `<notification>`:one way Server to client on subscription ack |\n",
-    "|Transport|SSH(Junos uses),TLS,HTTP(S)|\n",
+    "|Content|  __RPC req__, resp __paylaod__ and some additional variables   |\n",
+    "|Operation|`<lock>,<unlock>`: __ConfigDB__, <br> `<get>`,`<get-config>`,`<edit-config>`,`<copy-config>`,`<delete-config>`:__Config__, <br> `<commit>,<discard-changes>,<validate>`:__Config change__, <br> `<create-subscription>,<close-session>,<kill-session>`: __Session info__     |\n",
+    "|Message|`<rpc>`:__Req__, `<rpc-reply>`:__ACK__, `<notification>`:one way Server to client on __subscription ack__ |\n",
+    "|Transport|__SSH__(Junos uses),TLS,HTTP(S)|\n",
     "\n",
     "* Configuring NETCONF, SSH alone activates NETCONF by default \n",
     "\n",
